--- a/main/templates/login_page.html
+++ b/main/templates/login_page.html
@@ -1,12 +1,35 @@
 {% extends "base.html" %}
-{% block title %}Login page{% endblock %}
-{% block content %}
-<div class="carousel-inner">
-    <div class="center">
-        <p style="font-size: 2cm; color: #000;">
-            -------------------------------------------------------------
-            login: just create a login blank in a center of screen
-        </p> 
+{% block title%}Register user{%endblock%}
+{% block content%}
+
+<h1>Login</h1>
+<form action="{% url 'login' %}" method=POST>
+    {% csrf_token %}
+    {{ form.as_p }}
+</form>
+
+<form>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Username</label>
+      <input type="email" class="form-control" name="Username" aria-describedby="emailHelp">
     </div>
-</div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Email</label>
+      <input type="password" class="form-control" name="Email">
+    </div>
+    <div class="mb-3 form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+{% if form.errors %}
+ <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    There was an error with your form...
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+ </div>
+
+{% endif %}
+
 {% endblock %}
