--- a/main/templates/login_page.html
+++ b/main/templates/login_page.html
@@ -3,23 +3,16 @@
 {% block content%}
 
 <h1>Login</h1>
+
 <form action="{% url 'login' %}" method=POST>
     {% csrf_token %}
-    {{ form.as_p }}
-</form>
-
-<form>
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Username</label>
-      <input type="email" class="form-control" name="Username" aria-describedby="emailHelp">
+      <label for="exampleInputEmail1" class="form-label">Email</label>
+      <input type="text" class="form-control" name="username" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Email</label>
-      <input type="password" class="form-control" name="Email">
-    </div>
-    <div class="mb-3 form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" name="password">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
@@ -29,7 +22,6 @@
     There was an error with your form...
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
  </div>
-
 {% endif %}
 
 {% endblock %}
