--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,46 +1,36 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>{% block title %}Mantiplex{% endblock %}</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
+<html lang="uk"><head>
+  <title>{% block title %}Mantiplex{% endblock %}</title>
+  <style>
+  table, th, td {
+    border: 1px solid #b479bd;
+    border-collapse: collapse;
+  }
+       /* Style the header */
+  header {
+      background-color: #68447c;
+      padding: 20px;
+      text-align: center;
+      font-size: 20px;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+  }
+     /* Create two columns/boxes that floats next to each other */
+  nav {
+      float: left;
+      width: 10%;
+      background: #b479bd;
+      padding: 20px;
+  }
+  article {
+      float: right;
+      padding: 20px;
+      width: 84.7%;
+      background-color: #f1f1f1;
+  }
+  </style></head>
     
-    <body>
-    <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/register">Register</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </header>
-    
-    <main>
-      {% block content %}{% endblock %}   
-      <!-- FOOTER -->
-      <footer class="container">
-      </footer>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+
+    {% block content %}{% endblock %}   
+
+  </body>
 </html>
