--- a/main/templates/calendar_page.html
+++ b/main/templates/calendar_page.html
@@ -1,13 +1,71 @@
 {% extends "base.html" %}
 {% block title%}Main calendar{%endblock%}
 {% block content%}
-
-<p>-</p>
-<p>-</p>
-<p>-</p>
-<p>-</p>
-<p>Here is a main calendar</p>
-<p>if not</p>
-<p>...</p>
-
+    <header>
+        <h2>Mantiplex</h2>
+    </header>
+    <nav style="height: 100dvh;">
+          <li><a href="#">Акаунт</a></li>
+    </nav>
+    <article>
+    <table style="width:100%; height: 300; left: 2cm;">
+        <tbody><tr>
+          <th colspan="7" style="background-color: #d4c2d6">Березень </th>
+        </tr>
+        <tr>
+            <th>Пн</th>
+            <th>Вт</th>
+            <th>Ср</th>
+            <th>Чт</th>
+            <th>Пт</th>
+            <th>Сб</th>
+            <th>Нд</th>
+        </tr>
+        <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>1</th>
+            <th>2</th>
+        </tr>
+        <tr>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+            <th>6</th>
+            <th>7</th>
+            <th>8</th>
+            <th>9</th>
+        </tr>
+        <tr>
+            <th>10</th>
+            <th>11</th>
+            <th>12</th>
+            <th>13</th>
+            <th>14</th>
+            <th>15</th>
+            <th>16</th>
+        </tr>
+        <tr>
+            <th>17</th>
+            <th>18</th>
+            <th>19</th>
+            <th>20</th>
+            <th>21</th>
+            <th>22</th>
+            <th>23</th>
+        </tr>
+        <tr>
+            <th>24</th>
+            <th>25</th>
+            <th>26</th>
+            <th>27</th>
+            <th>28</th>
+            <th>29</th>
+            <th>31</th>
+        </tr>
+    
+    </tbody></table></article>
 {%endblock%}
