feat: added first permision

--- a/main/templates/calendar_page.html
+++ b/main/templates/calendar_page.html
@@ -8,7 +8,7 @@
           <li><a href="#">Акаунт</a></li>
     </nav>
     <article>
-    <table style="width:100%; height: 300; left: 2cm;">
+    <table style="width:100%; height: 35%; left: 2cm;">
         <tbody><tr>
           <th colspan="7" style="background-color: #d4c2d6">Березень </th>
         </tr>
