--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -4,6 +4,7 @@
   table, th, td {
     border: 1px solid #b479bd;
     border-collapse: collapse;
+    font-family: Arial, Helvetica, sans-serif
   }
        /* Style the header */
   header {
