feat: added calendar pages

--- a/main/templates/calendar_page.html
+++ b/main/templates/calendar_page.html
@@ -2,10 +2,11 @@
 {% block title%}Main calendar{%endblock%}
 {% block content%}
     <header>
-        <h2>Mantiplex</h2>
+        <a style="text-align: left; text-decoration: solid;" href="/">Додому</a><h2>Mantiplex</h2>
     </header>
-    <nav style="height: 100dvh;">
-          <li><a href="#">Акаунт</a></li>
+    <nav style="height: 100%;">
+          <li><a href="your_profile/">Акаунт</a></li>
+          <li><a href="users/">Користувачі</a></li>
     </nav>
     <article>
     <table style="width:100%; height: 35%; left: 2cm;">
@@ -27,7 +28,7 @@
             <th></th>
             <th></th>
             <th></th>
-            <th>1</th>
+            <th><a href="events_1st_march/">1</a></th>
             <th>2</th>
         </tr>
         <tr>
