--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,10 +1,16 @@
 <html lang="uk"><head>
   <title>{% block title %}Mantiplex{% endblock %}</title>
   <style>
+  main {
+    width: 100%;
+    height: 100dvb;
+    background-color: #ffffff;
+  }
   table, th, td {
     border: 1px solid #b479bd;
     border-collapse: collapse;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    position: sticky;
   }
        /* Style the header */
   header {
@@ -30,8 +36,7 @@
   }
   </style></head>
     
-
-    {% block content %}{% endblock %}   
+    <main>{% block content %}{% endblock %}  </main>
 
   </body>
 </html>
