feat: added profile form for register

--- a/main/templates/calendar_page.html
+++ b/main/templates/calendar_page.html
@@ -5,8 +5,8 @@
         <a style="text-align: left; text-decoration: solid;" href="/">Додому</a><h2>Mantiplex</h2>
     </header>
     <nav style="height: 100%;">
-          <li><a href="your_profile/">Акаунт</a></li>
-          <li><a href="users/">Користувачі</a></li>
+          <a href="your_profile/">Акаунт</a>
+          <p><a href="users/">Користувачі</a></p>
     </nav>
     <article>
     <table style="width:100%; height: 35%; left: 2cm;">
