--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,39 +1,70 @@
 <html lang="uk"><head>
   <title>{% block title %}Mantiplex{% endblock %}</title>
   <style>
-  main {
-    width: 100%;
-    height: 100dvb;
-    background-color: #ffffff;
-  }
-  table, th, td {
-    border: 1px solid #b479bd;
-    border-collapse: collapse;
-    font-family: Arial, Helvetica, sans-serif;
-    position: sticky;
-  }
-       /* Style the header */
-  header {
-      background-color: #68447c;
-      padding: 20px;
-      text-align: center;
-      font-size: 20px;
-      color: white;
+    main {
+      width: 100%;
+      height: 100dvb;
+      background-color: #ffffff;
+      font: normal;
+    }
+    table, th, td {
+      border: 1px solid #b479bd;
+      border-collapse: collapse;
       font-family: Arial, Helvetica, sans-serif;
-  }
-     /* Create two columns/boxes that floats next to each other */
-  nav {
-      float: left;
-      width: 10%;
-      background: #b479bd;
-      padding: 20px;
-  }
-  article {
-      float: right;
-      padding: 20px;
-      width: 84.7%;
-      background-color: #f1f1f1;
-  }
+      position: sticky;
+    }
+        /* Style the header */
+    header {
+        background-color: #68447c;
+        padding: 20px;
+        text-align: center;
+        font-size: 20px;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+
+        /* background-color: #3A2546; */
+        /* color: #FDEAE0; */
+    }
+      /* Create two columns/boxes that floats next to each other */
+    nav {
+        float: left;
+        width: 10%;
+        background: #b479bd;
+        padding: 20px;
+    }
+    article {
+        float: right;
+        padding: 20px;
+        width: 84.7%;
+        background-color: #f1f1f1;
+    }
+
+    pre {
+        text-align: center;
+        font-size:140%;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    .button {
+        border: 2px solid #FDEAE0;
+        background-color:#FDEAE0;
+        border-radius: 8px;
+        padding: 5px;
+        text-align: center;
+        display: flex;
+        margin: 0 auto;
+    }
+    .button1 {
+        background-color: white; 
+        color: black; 
+        border: 2px solid #A57DB6;
+        text-align: center;
+    }
+
+    .button1:hover {
+        background-color: #3A2546;
+        color: #FDEAE0;
+        text-align: center;
+    }
   </style></head>
     
     <main>{% block content %}{% endblock %}  </main>
