--- a/main/templates/teacher_profile.html
+++ b/main/templates/teacher_profile.html
@@ -12,6 +12,8 @@
 
 <br/><br/>
 
+{{ message }}
+
 {% if form.errors %}
  <div class="alert alert-warning alert-dismissible fade show" role="alert">
     There was error with your form...
