feat: added profile info

--- a/main/templates/calendar_page.html
+++ b/main/templates/calendar_page.html
@@ -4,7 +4,7 @@
     <header>
         <a style="text-align: left; text-decoration: solid;" href="/">Додому</a><h2>Mantiplex</h2>
     </header>
-    <nav style="height: 100%;">
+    <nav>
         <p><a href="your_profile/">Акаунт</a></p>
         <p><a href="users/">Користувачі</a></p>
         {% if request.user.is_staff %}
