--- a/main/templates/users.html
+++ b/main/templates/users.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 {% block title%}Main calendar{%endblock%}
 {% block content%}
-    <nav><article><header>
+    <header>
         <p>Users:</p>
     </header>
-    <p>here will be an list of users</p>
-    <a href="/calendar">back</a>
-    <a href="user_profile/">any User</a>
-    </article></nav>
+    <nav>
+    </nav>
+    <article>
+        <p>here will be an list of users</p>
+        <a href="/calendar">back</a>
+        <a href="user_profile/">any User</a>
+    </article>
 {%endblock%}
