--- a/staticproduction/global_style.css
+++ b/staticproduction/global_style.css
@@ -1,7 +1,7 @@
 main {
     width: 100%;
     height: 100dvb;
-    background-color: #fff;
+    background-color: #aaa;
     font: normal;
 }
 table, th, td {
