--- a/main/templates/own_profile.html
+++ b/main/templates/own_profile.html
@@ -7,7 +7,7 @@
     <nav>
         <a href="/calendar">До календаря</a>
         {% if request.user.is_staff %}
-            <a href="/admin">Адмін</a>
+            <p><a href="/admin">Адмін</a></p>
         {% endif %}
     </nav>
     <article>
