--- a/main/templates/calendar_page.html
+++ b/main/templates/calendar_page.html
@@ -1,75 +1,39 @@
-{% extends "base.html" %}
+{% extends "common/base.html" %}
+{% load static %}
 {% block title%}Main calendar{%endblock%}
 {% block content%}
-    <header>
-        <a style="text-align: left; text-decoration: solid;" href="/">Додому</a><h2>Mantiplex</h2>
-    </header>
-    <nav>
-        <p><a href="your_profile/">Акаунт</a></p>
-        <p><a href="users/">Користувачі</a></p>
-        {% if request.user.is_staff %}
-            <p><a href="/admin">Адмін</a></p>
-        {% endif %}
-    </nav>
-    <article>
-    <table style="width:100%; height: 35%; left: 2cm;">
-        <tbody><tr>
-          <th colspan="7" style="background-color: #d4c2d6">Березень </th>
-        </tr>
-        <tr>
-            <th>Пн</th>
-            <th>Вт</th>
-            <th>Ср</th>
-            <th>Чт</th>
-            <th>Пт</th>
-            <th>Сб</th>
-            <th>Нд</th>
-        </tr>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th><a href="events_1st_march/">1</a></th>
-            <th>2</th>
-        </tr>
-        <tr>
-            <th>3</th>
-            <th>4</th>
-            <th>5</th>
-            <th>6</th>
-            <th>7</th>
-            <th>8</th>
-            <th>9</th>
-        </tr>
-        <tr>
-            <th>10</th>
-            <th>11</th>
-            <th>12</th>
-            <th>13</th>
-            <th>14</th>
-            <th>15</th>
-            <th>16</th>
-        </tr>
-        <tr>
-            <th>17</th>
-            <th>18</th>
-            <th>19</th>
-            <th>20</th>
-            <th>21</th>
-            <th>22</th>
-            <th>23</th>
-        </tr>
-        <tr>
-            <th>24</th>
-            <th>25</th>
-            <th>26</th>
-            <th>27</th>
-            <th>28</th>
-            <th>29</th>
-            <th>31</th>
-        </tr>
-    
-    </tbody></table></article>
+<link rel="stylesheet" href="{% static 'calendar.css' %}?v=1.13">
+<div class="container my-4">
+    <div id="calendar" class="text-center">
+        <h1 class="display-5 text-center pt-2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="mantiplex-previous-month bi bi-arrow-left-square pointer" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+              </svg>
+            <div class="d-inline-block">{{selected_month}} {{selected_year}}</div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="mantiplex-next-month bi bi-arrow-right-square pointer" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm4.5 5.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z"/>
+              </svg>
+        </h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    {% for day in weeks %}
+                        <th scope="col" class="border-2 height">{{day}}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
+            <tbody>
+                {% for week in selected_days  %}
+                    <tr>
+                        {% for day in week %}
+                            <td class="{% if day %}cell-hover{% else %}border-0{% endif %}{% if is_selected_month_current and day == current_day %} mantiplex-current-day-cell{% endif %} fs-4 border text-center">
+                                <p>{{ day }}</p>
+                            </td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <script src="{% static 'calendar.js' %}"></script>
 {%endblock%}
