--- a/main/templates/login_page.html
+++ b/main/templates/login_page.html
@@ -1,10 +1,11 @@
-{% extends "base.html" %}
+{% extends "common/base.html" %}
 {% block title%}Login user{%endblock%}
 {% block content%}
 
-<h1>Login</h1>
 
-<form action="{% url 'login' %}" method=POST>
+
+<form action="{% url 'login' %}" method=POST class="pt-5">
+  <h1>Login</h1>
     {% csrf_token %}
     <div class="mb-3">
       <label for="usernameInput" class="form-label">Username</label>
