--- a/main/templates/common/navbar.html
+++ b/main/templates/common/navbar.html
@@ -11,13 +11,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
         {% if request.user.is_staff %}
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="" href="/admin">Admin</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="" href="/admin">Адмін</a>
+            </li>
         {% endif %}
-        <!-- <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-        </li> -->
+        {% if request.user.is_authenticated %}
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="" href="/calendar/your_profile">Мій Профіль</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="" href="/login">Логін</a>
+            </li>
+        {% endif %}
         </ul>
     </div>
     </div>
