--- a/main/templates/own_profile.html
+++ b/main/templates/own_profile.html
@@ -1,16 +1,7 @@
-{% extends "base.html" %}
+{% extends "common/base.html" %}
 {% block title%}Профіль{%endblock%}
 {% block content%}
-    <header>
-        <p>Ваш профіль</p>
-    </header>
-    <nav>
-        <a href="/calendar">До календаря</a>
-        {% if request.user.is_staff %}
-            <p><a href="/admin">Адмін</a></p>
-        {% endif %}
-    </nav>
-    <article>
+    <article class="p-3 mb-4">
         <h1>Ваш профіль</h1>
 
         <p>first name: {{ my_user.first_name }}</p>
