--- a/main/templates/events.html
+++ b/main/templates/events.html
@@ -12,14 +12,10 @@
     <h3 class="pt-3">here will be an task</h3>
     {% for task in tasks %}
         {% if task.creator.auth_user_id_id == request.user.id %}
-            <p><a href="{{ task.id }}">{{ task.name }}: {{ task.begin_time }} - {{ task.end_time }}</a></p>
+            <p><a href="/calendar/task/{{ task.id }}">{{ task.name }}: {{ task.begin_time }} - {{ task.end_time }}</a></p>
         {% else %}
             <p>{{ task.name }}: {{ task.begin_time }} - {{ task.end_time }}</p>
         {% endif %}
     {% endfor %}
-    {% if role != 'parent' %}
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <a href="/calendar/event" style="text-decoration: none; color: white;">Створити подію або завдання</a>
-        </button>
-    {% endif %}
+    {{task_status}}
 {%endblock%}
